# libuvd

./: CMakeLists.txt  LICENSE  README.md  uvd.pc.in
.github/ISSUE_TEMPLATE/: bug_report.md
hash-generator/: cmake.cmake  enumhasher.c
src/: libuvd.c  libuvd.h
